fix the bottom whitespace

--- a/index.css
+++ b/index.css
@@ -69,6 +69,7 @@ button {
   position: relative;
   max-width: 1500px;
   width: 100%;
+  top: 95px;
   height: calc(100vh - 95px); /* Optional: Use auto for responsive height or set a percentage */
   background: #fcf8f8;
   overflow-x: hidden;
@@ -196,7 +197,6 @@ button {
 }
 
 .headline {
-  margin-top: 95px; 
   display: flex;
   text-align: center;
   flex-direction: column;
